--- a/shop.html
+++ b/shop.html
@@ -554,14 +554,16 @@
       cursor: pointer;
     }
 
+    /* ✅ Footer */
     footer {
-      background: green;
-      color: white;
-      padding: 30px 20px;
+      background: linear-gradient(145deg, #056608, #0b8a0d);
+      color: #fff;
+      padding: 40px 20px;
+      font-family: "Poppins", sans-serif;
     }
 
     .footer-container {
-      max-width: 1400px;
+      max-width: 1300px;
       margin: 0 auto;
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -570,50 +572,94 @@
 
     .footer-section h3,
     .footer-section h4 {
-      margin-bottom: 10px;
-      font-weight: 800;
+      color: #fff;
+      margin-bottom: 15px;
+      font-weight: 700;
+      font-size: 1.2rem;
+      border-bottom: 2px solid #ffd700;
+      display: inline-block;
+      padding-bottom: 5px;
+    }
+
+    .footer-section p {
+      font-size: 14px;
+      line-height: 1.6;
     }
 
     .footer-section ul {
       list-style: none;
+      padding: 0;
     }
 
     .footer-section ul li {
-      margin-bottom: 8px;
+      margin-bottom: 10px;
     }
 
     .footer-section ul li a {
-      color: white;
+      color: #fff;
       text-decoration: none;
-      font-weight: 600;
-      transition: color 0.3s;
+      font-weight: 500;
+      transition: color 0.3s ease;
     }
 
     .footer-section ul li a:hover {
       color: #ffd700;
-      text-decoration: underline;
     }
 
+    /* WhatsApp Order Button */
     .whatsapp {
-      margin: 15px 0;
+      margin: 25px 0;
       text-align: center;
     }
 
     .whatsapp a {
       background: #25D366;
       color: white;
-      padding: 10px 20px;
-      border-radius: 5px;
+      padding: 12px 25px;
+      border-radius: 30px;
       font-weight: bold;
       text-decoration: none;
+      transition: background 0.3s ease;
     }
 
+    .whatsapp a:hover {
+      background: #1eb85b;
+    }
+
+    /* Footer Bottom */
     .footer-bottom {
       text-align: center;
-      margin-top: 20px;
-      border-top: 1px solid white;
-      padding-top: 10px;
+      border-top: 1px solid rgba(255, 255, 255, 0.3);
+      padding-top: 15px;
+      font-size: 14px;
     }
+
+    .footer-bottom p {
+      margin: 5px 0;
+    }
+
+    .footer-links a {
+      color: #ffd700;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .footer-links a:hover {
+      text-decoration: underline;
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .footer-container {
+        text-align: center;
+      }
+
+      .footer-section h3,
+      .footer-section h4 {
+        border: none;
+      }
+    }
+
 
     @media (max-width: 480px) {
 
@@ -719,15 +765,19 @@
   <!-- Footer -->
   <footer>
     <div class="footer-container">
+      <!-- About Section -->
       <div class="footer-section about">
         <h3>Ermunai Organic Farm Foods</h3>
-        <p><i class="fa fa-map-marker-alt"></i> M/s. Ermunai Organic Farm Foods,<br>Plot No. 8, Ramalingam
-          St.,BFI,<br>Muraliram Srinivas Flats,<br>Ullagaram,<br>Chennai - 600 091.</p>
+        <p><i class="fa fa-map-marker-alt"></i> M/s. Ermunai Organic Farm Foods,<br>
+          Plot No. 8, Ramalingam St., BFI,<br>
+          Muraliram Srinivas Flats,<br>
+          Ullagaram, Chennai - 600 091.</p>
         <p><i class="fa fa-phone"></i> +91 9841231996</p>
         <p><i class="fab fa-whatsapp"></i> +91 9840752833</p>
         <p><i class="fa fa-envelope"></i> ermunaiorganicfarm@gmail.com</p>
       </div>
 
+      <!-- Company Links -->
       <div class="footer-section company">
         <h4>Company</h4>
         <ul>
@@ -737,9 +787,12 @@
           <li><a href="feedback.html">Certification & Feedback</a></li>
           <li><a href="contact.html">Contact Us</a></li>
           <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="terms.html">Terms & Conditions</a></li>
+          <li><a href="shipping.html">Shipping Policy</a></li>
         </ul>
       </div>
 
+      <!-- Product Categories -->
       <div class="footer-section products">
         <h4>Products</h4>
         <ul>
@@ -751,6 +804,7 @@
         </ul>
       </div>
 
+      <!-- Social Links -->
       <div class="footer-section follow-us">
         <h4><i class="fas fa-share-alt"></i> Follow Us</h4>
         <ul>
@@ -766,14 +820,24 @@
       </div>
     </div>
 
+    <!-- WhatsApp Order Button -->
     <div class="whatsapp">
-      <a href="https://wa.me/919841231996" target="_blank"><i class="fab fa-whatsapp"></i> Order on WhatsApp</a>
+      <a href="https://wa.me/919841231996" target="_blank">
+        <i class="fab fa-whatsapp"></i> Order on WhatsApp
+      </a>
     </div>
 
+    <!-- Footer Bottom -->
     <div class="footer-bottom">
-      <p>© 2024 Ermunai Organic Farm Foods. All rights reserved.</p>
+      <p>© 2025 Ermunai Organic Farm Foods. All rights reserved.</p>
+      <p class="footer-links">
+        <a href="privacy.html">Privacy Policy</a> |
+        <a href="terms.html">Terms & Conditions</a> |
+        <a href="shipping.html">Shipping Policy</a>
+      </p>
     </div>
   </footer>
+
 
   <script type="module">
     // Header navigation
