--- a/contact.html
+++ b/contact.html
@@ -698,9 +698,9 @@
           <li><a href="about.html">About Us</a></li>
           <li><a href="feedback.html">Certification & Feedback</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="privacy.html">Privacy Policy</a></li>
-          <li><a href="terms.html">Terms & Conditions</a></li>
-          <li><a href="shipping.html">Shipping Policy</a></li>
+          <li><a href="privacy.html" target="_blank">Privacy Policy</a></li>
+          <li><a href="terms.html" target="_blank">Terms & Conditions</a></li>
+          <li><a href="shipping.html" target="_blank">Shipping Policy</a></li>
         </ul>
       </div>
 
@@ -743,9 +743,9 @@
     <div class="footer-bottom">
       <p>© 2025 Ermunai Organic Farm Foods. All rights reserved.</p>
       <p class="footer-links">
-        <a href="privacy.html">Privacy Policy</a> |
-        <a href="terms.html">Terms & Conditions</a> |
-        <a href="shipping.html">Shipping Policy</a>
+        <a href="privacy.html" target="_blank">Privacy Policy</a> |
+        <a href="terms.html" target="_blank">Terms & Conditions</a> |
+        <a href="shipping.html" target="_blank">Shipping Policy</a>
       </p>
     </div>
   </footer>
