--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
 
         <div class="product-card">
           <div class="card-image">
-            <img src="./images/idlipodi.png" alt="Idli Podi's">
+            <img src="./images/idlipodi.jpg" alt="Idli Podi's">
             <span class="badge">7+ varieties</span>
           </div>
           <div class="card-content">
