--- a/terms.html
+++ b/terms.html
@@ -2,87 +2,74 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms and Conditions – Ermunai Organic Farm Foods</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-            background: #fafafa;
-            color: #333;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Terms and Conditions – Ermunai Organic Farm Foods</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #fafafa;
+      color: #333;
+    }
 
-        .container {
-            max-width: 900px;
-            margin: 50px auto;
-            background: #fff;
-            padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
+    .container {
+      max-width: 900px;
+      margin: 50px auto;
+      background: #fff;
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
 
-        h1,
-        h2 {
-            color: #2b7a0b;
-        }
+    h1,
+    h2 {
+      color: #2b7a0b;
+    }
 
-        a {
-            color: #2b7a0b;
-            text-decoration: none;
-        }
-    </style>
+    a {
+      color: #2b7a0b;
+      text-decoration: none;
+    }
+  </style>
 </head>
 
 <body>
-    <div class="container">
-        <h1>Terms and Conditions</h1>
-        <p>Welcome to <strong>Ermunai Organic Farm Foods</strong>. By accessing or using our website (<a
-                href="https://ermunaiorganicfarmfoods.com">ermunaiorganicfarmfoods.com</a>), you agree to comply with
-            and be bound by the following terms and conditions.</p>
+  <div class="container">
+    <h1>Terms and Conditions</h1>
+    <p>Welcome to <strong>Ermunai Organic Farm Foods</strong>. By using our website (<a href="https://ermunaiorganicfarmfoods.com">ermunaiorganicfarmfoods.com</a>), you agree to the following terms.</p>
 
-        <h2>1. Use of Our Website</h2>
-        <p>You agree to use this website for lawful purposes only and in a way that does not infringe the rights of
-            others or restrict their use and enjoyment of the site.</p>
+    <h2>1. Use of Website</h2>
+    <p>You agree to use this website only for lawful purposes and not to disrupt its operation or harm other users.</p>
 
-        <h2>2. Product Information</h2>
-        <p>We strive to provide accurate product details. However, there may be minor variations in color, texture, or
-            packaging. All descriptions and prices are subject to change without notice.</p>
+    <h2>2. Product Accuracy</h2>
+    <p>We strive to ensure product descriptions and images are accurate, but minor variations may occur.</p>
 
-        <h2>3. Orders and Payments</h2>
-        <p>All orders placed through our website are subject to acceptance. Payments must be made through the secure
-            payment gateways we provide. We reserve the right to refuse or cancel any order at our discretion.</p>
+    <h2>3. Orders & Payments</h2>
+    <p>All orders are subject to acceptance. Payments are processed securely via Razorpay. We reserve the right to cancel orders for any reason.</p>
 
-        <h2>4. Shipping and Delivery</h2>
-        <p>We aim to deliver orders within the estimated time frame. However, delays may occur due to unforeseen
-            circumstances. Please refer to our <a href="shipping.html">Shipping Policy</a> for more details.</p>
+    <h2>4. Shipping</h2>
+    <p>Orders are shipped as per our <a href="/shipping-policy">Shipping Policy</a>.</p>
 
-        <h2>5. Cancellations and Refunds</h2>
-        <p>Cancellation or refund requests must comply with our Return Policy. Refunds are processed only for eligible
-            cases after proper verification.</p>
+    <h2>5. Cancellation & Refunds</h2>
+    <p>Cancellations and refunds are handled according to our <a href="/cancellation-and-refund-policy">Cancellation and Refund Policy</a>.</p>
 
-        <h2>6. Intellectual Property</h2>
-        <p>All content, including text, graphics, logos, and images, is the property of Ermunai Organic Farm Foods and
-            protected by copyright laws.</p>
+    <h2>6. Intellectual Property</h2>
+    <p>All text, graphics, and images on this site are property of Ermunai Organic Farm Foods and cannot be used without permission.</p>
 
-        <h2>7. Limitation of Liability</h2>
-        <p>We are not liable for any indirect, incidental, or consequential damages resulting from the use or inability
-            to use our services.</p>
+    <h2>7. Limitation of Liability</h2>
+    <p>We are not liable for indirect damages arising from use of our services or products.</p>
 
-        <h2>8. Changes to Terms</h2>
-        <p>We may update these Terms from time to time. Continued use of the website means you accept any updated terms.
-        </p>
+    <h2>8. Modifications</h2>
+    <p>We may update these Terms periodically. Continued use of our website implies acceptance of changes.</p>
 
-        <h2>9. Contact Us</h2>
-        <p>If you have any questions about these Terms, please contact us at:</p>
-        <p>
-            📧 <a href="mailto:ermunaiorganicfarm@gmail.com">ermunaiorganicfarm@gmail.com</a><br>
-            📞 +91 9841231996 / +91 9840752833<br>
-            📍 Chennai – 600091, India
-        </p>
-    </div>
+    <h2>9. Contact</h2>
+    <p>For any questions, contact us at:<br>
+      📧 <a href="mailto:ermunaiorganicfarm@gmail.com">ermunaiorganicfarm@gmail.com</a><br>
+      📞 +91 9841231996 / +91 9840752833
+    </p>
+  </div>
 </body>
 
 </html>
