--- a/about.html
+++ b/about.html
@@ -796,7 +796,8 @@
           <li><a href="about.html">About Us</a></li>
           <li><a href="feedback.html">Certification & Feedback</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="privacy.html" target="_blank">Privacy Policy</a></li>
+          <li><a href="privacy-policy.html" target="_blank">Privacy Policy</a></li>
+          <li><a href="privacy.html" target="_blank">cancellation Policy</a></li>
           <li><a href="terms.html" target="_blank">Terms & Conditions</a></li>
           <li><a href="shipping.html" target="_blank">Shipping Policy</a></li>
         </ul>
