--- a/contact.html
+++ b/contact.html
@@ -699,9 +699,9 @@
           <li><a href="feedback.html">Certification & Feedback</a></li>
           <li><a href="contact.html">Contact Us</a></li>
           <li><a href="privacy-policy.html" target="_blank">Privacy Policy</a></li>
-          <li><a href="privacy.html" target="_blank">cancellation Policy</a></li>
-          <li><a href="terms.html" target="_blank">Terms & Conditions</a></li>
-          <li><a href="shipping.html" target="_blank">Shipping Policy</a></li>
+          <li><a href="cancellation-and-refund-policy.html" target="_blank">cancellation Policy</a></li>
+          <li><a href="terms-and-conditions.html" target="_blank">Terms & Conditions</a></li>
+          <li><a href="shipping-policy.html" target="_blank">Shipping Policy</a></li>
         </ul>
       </div>
 
